# Bioinformed-Skill-App

./: .codecov.yml  .coveragerc  .dockerignore  .ebignore  .gitignore  .gitpod.Dockerfile  .gitpod.yml  CODEOWNERS  Dockerfile  Dockerfile.dev  LICENSE  Procfile  README.md  __main__.py  app.py  app_data.db  codecov.yml  db.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  wsgi.py
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/workflows/: codeql-analysis.yml  deploy.crud.yml  deploy.ghbot.yml  deploy.webui.yml  deploy.yml  deploy_crud.yml  test.crud.yml  test.ghbot.yml  test.integration.yml  test.webui.yml  tests.yml
app/: __init__.py  __main__.py  config.py  dependencies.py  fake_skill_cert.db  initial_data.py  main.py  routes.py
app/api/: __init__.py  api_endpoints.py  services.py
app/auth/: __init__.py  oauth.py  token.py  wrappers.py
app/crud/: __init__.py  crud.py  random_data_crud.py
app/db/: __init__.py  assessments.csv  base.py  base_class.py  create_fake_data.py  db.py  fill_db.py  init_db.py  initiate_db.py  session.py
app/models/: models.py
app/schemas/: __init__.py  schemas.py  (+4 more)
bot/: __init__.py  auth.py  bot.py  const.py  schemas.py  utils.py
crud/: .codecov.yml  .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  smee_run.sh
crud/.github/workflows/: deploy.yml  tests.yml
crud/app/: dependencies.py
crud/app/api/: __init__.py  api_endpoints.py  schemas.py
crud/app/crud/: crud.py
crud/app/db/: models.py  test_data.py
crud/app/slack_utils/: README.md  __init__.py  review_request.json  review_request_update.json  slack_utils.py
crud/app/utils/: badgr_utils.py  utils.py
crud/data/: assessments_test.csv
crud/tests/: conftest.py  test_api_endpoints.py  test_badgr_utils.py  test_crud.py  test_main.py  test_slack_utils.py  test_utils.py
data/: assessments.csv  assessments_test.csv  countries.txt
db/: Dockerfile
ghbot/: .gitignore  Dockerfile  README.md  main.py  requirements.txt  run.sh
slackbot/: CODEOWNERS  README.md  bot.py
sync/: .dockerignore  CODEOWNERS  README.md  config.py  handler.py  models.py  requirements.txt  sync.py
templates/: _base.html  _dashboard.html  assessments.html  index.html  onboarding.html  profile.html  settings.html  verify_code_from_email.html  welcome_email.html
tests/: .gitignore  conftest.py  test_approve.py  test_badgr_utils.py  test_bot.py  test_bot_init.py  test_bot_utils.py  test_check.py  test_init.py  test_main.py  test_review.py  test_sync.py  test_update.py  test_utils.py
webui/: .coveragerc  .gitignore  Dockerfile  README.md  requirements.txt  wsgi.py
(+77 files in other folders)
