[tool.poetry]
name = "skill-app-flask"
version = "0.1.0"
description = ""
authors = ["millerh1 <millerh1@livemail.uthscsa.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
Flask-Dance = "^6.0.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Login = "^0.6.1"
blinker = "^1.4"
gunicorn = "^20.1.0"
SQLAlchemy-Utils = "^0.38.2"
PyMySQL = "^1.0.2"
mailchimp-transactional = "^1.0.47"
APScheduler = "^3.9.1"
python-dotenv = "^0.20.0"
pydantic = "^1.9.1"
pytest = "^7.1.2"
flake8 = "^4.0.1"
black = "^22.3.0"
coverage = "^6.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
